# midi1_ble_human_bpm

./: CMakeLists.txt  Kconfig  README.rst  prj.conf  ram_report.txt  rom_report.txt
boards/: frdm_rw612.conf  frdm_rw612.overlay
common/: common.cmake
drivers/: CMakeLists.txt  Kconfig  midi1.h  midi1_blockavg.h  midi1_clock_cntr.c  midi1_clock_cntr.h  midi1_clock_counter.c  midi1_clock_counter.h  midi1_clock_meas_cntr.c  midi1_clock_meas_cntr.h  midi1_serial.c  midi1_serial.c.patch  module.yml
drivers/v2/: midi1_serial.c  midi1_serial.h
dts/bindings/midi/: midi1_clock_counter.yaml
src/: Kconfig  common.c  common.h  lvgl_thread.c  main.c  midi1_clock_counter.c  midi1_clock_counter.h  midi1_clock_pll_ticks.c  midi1_clock_pll_ticks.h  midi1_pll.c  midi1_pll.h  midi1_receive_thread.c  midi_freq_table.h  model.c  model.h  note.c  note.h
tests/midi1_serial/: CMakeLists.txt  prj.conf
tests/midi1_serial/boards/: frdm_rw612.overlay
tests/midi1_serial/src/: main.c
